--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ include = [
 
 [dependencies]
 lazy_static = "1.4.0"
+objc = "0.2.7"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 quad-storage-sys = { path = "quad-storage-sys", version = "0.1.0" }
