--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ include = [
 
 [dependencies]
 lazy_static = "1.4.0"
+[target.'cfg(target_os = "ios")'.dependencies]
 objc = "0.2.7"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
